# src/controllers/cart.controller.js
@@ -2,31 +2,17 @@ const {
   models: { userDetail, Product, addCart },
 } = require("../models");
 
-const jwt = require("jsonwebtoken");
-const dotenv = require("dotenv");
-dotenv.config();
-const secretKey = process.env.JWT_SECRET_KEY;
+const Sequelize = require('sequelize');
+const { Op } = Sequelize;
 
 exports.handle_cart = async (req, res) => {
   try {
-    let payload = { userId: null };
-    let itemsList = [];
-    const token =
-      req.body.token ||
-      req.query.token ||
-      req.headers.authorization?.split(" ")[1];
-
-    if (token) {
-      const decode = jwt.verify(token, secretKey); // Replace with your secret key
-      const expirationTime = decode.exp;
-
-      if (Date.now() >= expirationTime * 1000) {
-        return res.status(401).json({ message: "Token has expired" });
-      }
-      payload.userId = decode.userId;
-    }
-
-    const { productName, tempId } = req.body;
+    //addition variable
+    let istempId;
+    
+    let userId = req.decode?.userId?req.decode.userId:null;
+    let tempId =  req.body.tempId || req.query.tempId ;
+    let { productName, quantity } = req.body;
 
     if (!productName) {
       return res.status(400).json({ msg: "productName is Required." });
@@ -38,56 +24,170 @@ exports.handle_cart = async (req, res) => {
     if (!isProduct) {
       return res.status(404).send({ msg: "Product not exist!!." });
     }
-
-    itemsList = [isProduct.id];
-
-    payload = {
-      ...payload,
-      items: itemsList,
+    
+    //define payload
+    let payload = {
+      userId: null,
+      items: [isProduct.id],
       gst: null,
-      quantity: 0,
       totalAmount: null,
-      quantity: itemsList.length,
+      quantity: 0,
+      discount: 0,
     };
 
-    let istempId;
-    if (tempId) {
-      istempId = await addCart.findByPk(tempId);
-      if (!istempId) {
-        return res.status(404).send({ msg: "TempId not exist!!." });
+    let cart_products = [];
+
+    if (userId || !tempId){
+      istempId = await addCart.findOne({where :{userId: userId}})
+      if(istempId){
+        tempId = istempId.id
       }
-      if (!istempId.items.length || !istempId.items.includes(isProduct.id)) {
-        let addInCart = [...istempId.items, isProduct.id];
-        await addCart.update(
-          {
-            items: addInCart,
-          },
-          {
-            where: {
-              id: istempId.id,
-            },
-          },
-        );
-        return res.status(200).send({
-          message: "prodcut save sucessfully in AddCart",
-          result: addInCart,
-        });
-      }
-      res.status(200).send({
-        message: "Prodcut is Already Add in cart.",
-        result: istempId,
-      });
-    } else {
-      const addInCart = await addCart.create({
-        ...payload,
-      });
-      res.status(200).send({
-        message: "Prodcut save sucessfully in AddCart",
-        result: addInCart,
-      });
     }
+
+    if ((!tempId && userId) || (!tempId && !userId)) {
+      payload.userId = userId ? userId : null;
+      istempId = await addCart.create({ ...payload });
+      cart_products = [isProduct];
+    }
+
+    if (tempId) {
+      istempId = await addCart.findOne({
+        where:  { id: tempId }
+      });
+
+      if (
+        !istempId.items.length ||
+        !istempId.items.includes(`${isProduct.id}`)
+      ) {
+        istempId.items = [...istempId.items, `${isProduct.id}`]; //ADD PRODUCT IN ITEMS LIST
+        await istempId.save();
+      }
+
+      let data = await Product.findAll({ where: { id: istempId.items } });
+      cart_products = [...cart_products, ...data];
+    }
+
+    cart_products.forEach((product) => {
+      payload.discount += Math.round(((product.price ) * product.discount) / 100);
+      payload.totalAmount +=
+        product.price - Math.round((product.price * product.discount) / 100);
+    });
+
+    istempId.discount = payload.discount;
+    istempId.totalAmount = payload.totalAmount;
+
+    return res.status(200).send({
+      message: "Prodcut added sucessfully in AddCart",
+      result: istempId,
+    });
   } catch (err) {
     console.log(err);
     res.status(500).json({ error: "Error adding category" });
   }
 };
+
+exports.remove_product_in_cart = async (req, res) => {
+  try {
+    let { productName, tempId } = req.body;
+    if (!productName) {
+      return res.status(400).json({ msg: "productName is Required." });
+    }
+    const isProduct = await Product.findOne({
+      where: { productName: productName },
+    });
+    if (!isProduct) {
+      return res.status(404).send({ msg: "Product not exist!!." });
+    }
+
+    let cart_products = [];
+
+    let istempId = await addCart.findByPk(tempId);
+
+    if (!istempId) {
+      return res.status(404).send({ msg: "TempId not exist!!." });
+    }
+
+    if (!istempId.items.length || !istempId.items.includes(`${isProduct.id}`)) {
+      return res.status(200).send({
+        message: "Does not have Product in AddCart",
+        result: istempId,
+      });
+    }
+      
+    istempId.items = istempId.items.filter(
+      (value) => value !== `${isProduct.id}`,
+      );     
+    await istempId.save();
+      
+    let payload = {
+      userId: null,
+      items: [isProduct.id],
+      gst: null,
+      totalAmount: null,
+      quantity: 0,
+      discount: 0,
+    };
+
+    let _products = await Product.findAll({ where: { id: istempId.items } });
+  
+    cart_products = [...cart_products, ..._products];
+    cart_products.forEach((product) => {
+      payload.discount += Math.round((product.price * product.discount) / 100);
+      payload.totalAmount +=
+        product.price - Math.round((product.price * product.discount) / 100);
+    });
+    
+    istempId.discount = payload.discount;
+    istempId.totalAmount = payload.totalAmount;
+
+    return res.status(200).send({
+      message: "Product deleted Successfully",
+      result: istempId,
+    });
+  } catch (error) {
+    return res.status(500).send({
+      message: `${error}`,
+    });
+  }
+};
+
+
+exports.getcart = async (req, res) =>{
+   try{
+    let istempId = await addCart.findOne({
+      where:  { id: req.query.tempId }
+    });
+
+    let cart_products = [];
+
+    let payload = {
+      userId: null,
+      items: [],
+      gst: null,
+      totalAmount: null,
+      quantity: 0,
+      discount: 0,
+    };
+
+    let _products = await Product.findAll({ where: { id: istempId.items } });
+  
+    cart_products = [...cart_products, ..._products];
+    cart_products.forEach((product) => {
+      payload.discount += Math.round((product.price * product.discount) / 100);
+      payload.totalAmount +=
+        product.price - Math.round((product.price * product.discount) / 100);
+    });
+    istempId.discount = payload.discount;
+    istempId.totalAmount = payload.totalAmount;
+
+    return res.status(200).send({
+      message: "tempId data!!",
+      result: istempId?[istempId]:[],
+    });
+
+  } catch (error) {
+    return res.status(500).send({
+      message: `${error}`,
+    });
+  }
+}
