# swagger.json
@@ -1,132 +1,132 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "version": "1.0.0",
-      "title": "NodeJS Api's",
-      "description": "User Restful webservice application",
-      "license": {
-        "name": "MIT",
-        "url": "https://opensource.org/licenses/MIT"
-      }
+  "swagger": "2.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "NodeJS Api's",
+    "description": "User Restful webservice application",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
+  },
+  "basePath": "localhost:8000",
+  "tags": [
+    {
+      "name": "Users",
+      "description": "API for users"
     },
-    "basePath": "localhost:8000",
-    "tags": [
-      {
-        "name": "Users",
-        "description": "API for users"
-      },
-      {
-        "name": "Products",
-        "description": "API for Products"
-      },
-      {
-        "name": "Categories",
-        "description": "API for Product Categories."
-      }
-    ],
-    "produces": ["application/json"],
-    "paths": {
-      "/users": {
-        "get": {
-          "tags": ["Users"],
-          "summary": "Get all users",
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "$ref": "#/definitions/Users"
-              }
-            }
-          }
-        }
-      },
-      "/user": {
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "required": true,
-            "description": "Id of the user which is to be searched",
-            "type": "integer"
-          }
-        ],
-        "produces": ["application/json"],
-        "get": {
-          "tags": ["Users"],
-          "summary": "Get user by id",
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "404": {
-              "description": "not found"
+    {
+      "name": "Products",
+      "description": "API for Products"
+    },
+    {
+      "name": "Categories",
+      "description": "API for Product Categories."
+    }
+  ],
+  "produces": ["application/json"],
+  "paths": {
+    "/users": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all users",
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/Users"
             }
           }
         }
       }
     },
-    "definitions": {
-      "User": {
-        "required": ["name", "_id", "companies"],
-        "properties": {
-          "id": {
-            "type": "integer",
-            "uniqueItems": true
-          },
-          "name": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "address": {
-            "type": "object",
-            "properties": {
-              "street": {
-                "type": "string"
-              },
-              "suite": {
-                "type": "string"
-              },
-              "city": {
-                "type": "string"
-              },
-              "zipcode": {
-                "type": "string"
-              }
+    "/user": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "query",
+          "required": true,
+          "description": "Id of the user which is to be searched",
+          "type": "integer"
+        }
+      ],
+      "produces": ["application/json"],
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get user by id",
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/User"
             }
           },
-          "phone": {
-            "type": "string"
-          },
-          "website": {
-            "type": "string"
-          },
-          "company": {
-            "type": "object",
-            "properties": {
-              "name": {
-                "type": "string"
-              },
-              "catchPhrase": {
-                "type": "string"
-              },
-              "bs": {
-                "type": "string"
-              }
-            }
+          "404": {
+            "description": "not found"
           }
         }
-      },
-      "Users": {
-        "type": "array",
-        "$ref": "#/definitions/User"
       }
     }
+  },
+  "definitions": {
+    "User": {
+      "required": ["name", "_id", "companies"],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "uniqueItems": true
+        },
+        "name": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "address": {
+          "type": "object",
+          "properties": {
+            "street": {
+              "type": "string"
+            },
+            "suite": {
+              "type": "string"
+            },
+            "city": {
+              "type": "string"
+            },
+            "zipcode": {
+              "type": "string"
+            }
+          }
+        },
+        "phone": {
+          "type": "string"
+        },
+        "website": {
+          "type": "string"
+        },
+        "company": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string"
+            },
+            "catchPhrase": {
+              "type": "string"
+            },
+            "bs": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "Users": {
+      "type": "array",
+      "$ref": "#/definitions/User"
+    }
   }
+}
